[gd_scene load_steps=22 format=3 uid="uid://cs16kc5fk27fi"]

[ext_resource type="Script" path="res://scripts/main.gd" id="1_whe4h"]
[ext_resource type="Script" path="res://scripts/tower_loader.gd" id="2_5b8x2"]
[ext_resource type="PackedScene" uid="uid://cuy5um8ffugo8" path="res://scenes/plexus.tscn" id="2_ejq2b"]
[ext_resource type="MeshLibrary" uid="uid://dfpi2igxswusg" path="res://data/chunk_meshlib.tres" id="2_wrvad"]
[ext_resource type="Script" path="res://scripts/path_generator.gd" id="3_gj108"]
[ext_resource type="Script" path="res://scripts/trigger_controller.gd" id="4_dwlpa"]
[ext_resource type="MeshLibrary" uid="uid://b323aya8uw6jm" path="res://data/dynamic_cell_library.tres" id="5_0hdan"]
[ext_resource type="Script" path="res://scripts/path_grid.gd" id="5_afs5d"]
[ext_resource type="Script" path="res://scripts/chaos_grid.gd" id="7_tuafb"]
[ext_resource type="PackedScene" uid="uid://dyig1h2oqvgy7" path="res://scenes/phantom_camera_controller.tscn" id="12_18ppj"]
[ext_resource type="Shader" path="res://data/plexus.gdshader" id="13_nsnuf"]
[ext_resource type="PackedScene" uid="uid://chycnjtad0jj3" path="res://scenes/brain_kundalini.tscn" id="15_bbeja"]
[ext_resource type="PackedScene" uid="uid://ck8vj575febrh" path="res://scenes/main_gui.tscn" id="16_6siav"]
[ext_resource type="PackedScene" uid="uid://cxme5m2v2nbon" path="res://scenes/placement_indicator.tscn" id="16_semjb"]
[ext_resource type="PackedScene" uid="uid://dsetycerax1g" path="res://scenes/pause_menu.tscn" id="17_w0eh3"]
[ext_resource type="PackedScene" uid="uid://cxjjfn6wehi0h" path="res://scenes/hand.tscn" id="18_dl0mc"]
[ext_resource type="PackedScene" uid="uid://dsjqp7eqftjgm" path="res://scenes/boon_selection_screen.tscn" id="20_d72dc"]
[ext_resource type="PackedScene" uid="uid://dg1bhsvig8d2h" path="res://scenes/speed_box.tscn" id="21_aif4f"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_s8niw"]
shader = ExtResource("13_nsnuf")
shader_parameter/resolution = Vector2(600, 400)
shader_parameter/line_color = Color(0.1, 0.4, 0.2, 1)
shader_parameter/octaves = 20
shader_parameter/zoom_factor = 10.0
shader_parameter/zoom_coef = 1.1
shader_parameter/brightness = 10.0
shader_parameter/rotation_angle = 0.5
shader_parameter/alpha_threshold = 0.0

[sub_resource type="Sky" id="Sky_8jmly"]
sky_material = SubResource("ShaderMaterial_s8niw")

[sub_resource type="Environment" id="Environment_v2304"]
background_mode = 3
sky = SubResource("Sky_8jmly")

[node name="main" type="Node3D"]
script = ExtResource("1_whe4h")

[node name="tower_loader" type="Node3D" parent="."]
script = ExtResource("2_5b8x2")

[node name="path_generator" type="Node3D" parent="."]
script = ExtResource("3_gj108")

[node name="trigger_controller" type="Node3D" parent="."]
script = ExtResource("4_dwlpa")

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = SubResource("Environment_v2304")

[node name="ParallaxBackground" type="ParallaxBackground" parent="."]

[node name="Plexus" parent="ParallaxBackground" instance=ExtResource("2_ejq2b")]

[node name="path_grid" type="GridMap" parent="."]
unique_name_in_owner = true
mesh_library = ExtResource("2_wrvad")
cell_size = Vector3(1, 1, 1)
script = ExtResource("5_afs5d")

[node name="chaos_grid" type="GridMap" parent="."]
unique_name_in_owner = true
mesh_library = ExtResource("5_0hdan")
cell_size = Vector3(1, 1, 1)
script = ExtResource("7_tuafb")

[node name="DirectionalLight3D" type="DirectionalLight3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 0.0740388, 0.997255, 0, -0.997255, 0.0740388, 0, 28.1727, 0)

[node name="phantom_camera_controller" parent="." instance=ExtResource("12_18ppj")]

[node name="kundalini" parent="." instance=ExtResource("15_bbeja")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.5, 1, 0.5)

[node name="placement_indicator" parent="." instance=ExtResource("16_semjb")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -2, 0)

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="player_gui" parent="CanvasLayer" instance=ExtResource("16_6siav")]
unique_name_in_owner = true
z_as_relative = false
mouse_filter = 2

[node name="CanvasLayer2" type="CanvasLayer" parent="."]

[node name="PauseMenu" parent="CanvasLayer2" instance=ExtResource("17_w0eh3")]
unique_name_in_owner = true

[node name="card_hand" parent="." instance=ExtResource("18_dl0mc")]
unique_name_in_owner = true
mouse_filter = 2

[node name="speed_box_layer" type="CanvasLayer" parent="."]

[node name="speed_box" parent="speed_box_layer" instance=ExtResource("21_aif4f")]

[node name="CanvasLayer3" type="CanvasLayer" parent="."]

[node name="boon_selection_screen" parent="CanvasLayer3" instance=ExtResource("20_d72dc")]
visible = false
